2002-10-14  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-exp-parser.c (func_op): Remove
	seemed-like-a-bad-idea explicit negation of calculated values;
	fixes Bug#95781.

2002-10-14  Derek Atkins  <derek@ihtfp.com>
	* src/backend/file/test-xml-transaction.c -- use gnc_numeric_equal()
	  to compare split value and quantities in tests, because Splits can
	  adjust those values based on the commodity.

	* src/backend/file/test/test-file-stuff.c -- don't spew so much
	
	* src/test-core and src/engine/test-core should not be added to
	  the gnucash-build-env (noinst_ is a static library)

	* add library directories for "make check"
	
2002-10-14  Chris Lyttle  <chris@wilddev.net>

	* src/import-export/Makefile.am: fix make dist breakage
	* src/engine/Makefile.am: more fixes

2002-10-13  Chris Lyttle  <chris@wilddev.net>

	* accounts/fr_FR/Makefile.am: fix make dist breakage
	* rpm/gnucash.spec.in: update for release
	* configure.in: change to version 1.7.1
	* AUTHORS: moved Benoit to main developers
	* NEWS: added section for 1.7.1 release.
	
2002-10-13  David Hampton  <hampton@employees.org>

	* src/scm/printing/print-check.scm: The check printing setup
	dialog is now called directly, instead of as a callback from the
	check printing code.

	* src/gnome/window-register.c (gnc_register_print_check_cb): Call
	the check printing setup dialog directly.

	* src/gnome/dialog-print-check.c
	(gnc_ui_print_compute_new_format): Give feedback on the format
	string being used. (gnc_ui_print_check_dialog_create): Rework for
	being called directly from the register code.  Now hiding instead
	of destroying the dialog, so remove hooks to remember state.  If
	the current register already has a print dialog open, reuse
	it. (gnc_ui_print_check_dialog_destroy): Hide the dialog instead
	of destroying it. (gnc_ui_print_check_dialog_ok_cb): Call the
	scheme printing code directly.

	* src/gnome/gw-gnc-spec.scm: Remove unneeded references to check
	printing.
